fix: alignment for transition category, and mobile padding for article items

--- a/src/theme.scss
+++ b/src/theme.scss
@@ -1058,6 +1058,7 @@ main#stream {
       text-align: left;
       text-transform: none;
       margin: var(--yl-m-md) 0;
+      padding: 0;
       color: #ffffff;
       font-weight: bold;
       line-height: 1;
@@ -2271,24 +2272,23 @@ html {
   }
 
   #nav_menu_views_dropdown ul.dropdown-menu,
-  #nav_menu_actions_dropdown ul.dropdown-menu {
+  #nav_menu_actions_dropdown ul.dropdown-men {
     .item a {
       width: 100%;
     }
   }
 }
 
-.dropdown {
-  position: relative;
-}
-
 .tree .tree-folder .tree-folder-items .item.active .dropdown li a,
-.dropdown .dropdown-menu .item a {
-  color: white;
+.dropdown .dropdown-menu .item a,
+li.item.feed .item-title {
+  color: #ffffff;
 }
 
 .dropdown {
   /* Dropdown menu styling. Displayed as bottom sheets on mobile. */
+  position: relative;
+
   .dropdown-menu,
   .box {
     background-color: #303136;
@@ -2344,14 +2344,14 @@ html {
 
 main#stream .box.category {
   .box-content {
-    padding: 1rem;
+    padding: var(--yl-p-sm);
 
     li.item.feed {
       border: none;
 
       a,
       a:hover {
-        color: white;
+        color: #fff;
       }
     }
   }
@@ -2397,15 +2397,29 @@ main.post {
     }
 
     .box-title {
-      padding: 1rem;
+      padding: var(--yl-p-sm);
     }
 
     .box-content {
-      padding: 1rem;
+      padding: var(--yl-p-sm);
+      background-color: #292929;
 
       .item,
       .item.feed {
         border: none;
+
+        a {
+          filter: brightness(2); /* Quick fix for bad constrast link color. */
+        }
+      }
+
+      .emptyCategory {
+        .alert-warn {
+          @include yl-gradient-bg(#fbb324, #b97d0d);
+          color: #ffffffc4;
+          padding: var(--yl-p-2xs);
+          border-radius: 8px;
+        }
       }
     }
 
@@ -2767,14 +2781,13 @@ body.youlag-inactive:not(.reader) main#stream {
   padding-right: var(--yl-p-md);
 
   @media (max-width: 840px) {
-    padding-right: var(--yl-p-2xs);
-  }
+    padding: 0;
 
-  .transition {
-
-    .name {
-      padding-left: var(--yl-p-xs); /* youlag-inactive: Align category name article thumbnail. */
-      box-sizing: border-box;
+    .transition {
+      .name {
+        padding-left: var(--yl-p-sm) !important; /* youlag-inactive: Align category name article thumbnail. */
+        box-sizing: border-box;
+      }
     }
   }
 
@@ -2822,7 +2835,7 @@ body.youlag-inactive:not(.reader) main#stream {
       border: 1px solid color-mix(in oklab,#fff 11%,transparent);
       border-radius: 14px;
       box-sizing: border-box;
-      padding: var(--yl-p-2xs) var(--yl-p-3xs);
+      padding: var(--yl-p-2xs) var(--yl-p-xs);
       margin: 0;
 
       @media (max-width: 840px) {
@@ -3565,7 +3578,7 @@ body {
       z-index: 20;
       transition: 0.4s;
       opacity: 1;
-      box-shadow: 0px -4px 14px 10px var(--yl-color-body-background); /* Cover content that peeks through, like '#first_load.loading', the FreshRSS feed loading spinner. */
+      box-shadow: 0px -6px 40px 20px var(--yl-color-body-background); /* Cover content that peeks through, like '#first_load.loading', the FreshRSS feed loading spinner. */
     }
   }
 
